testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/lex_illegal_character_nul.expect.out
error: unknown start of token: \u{0000}
  ==> lex_illegal_character_nul.cj:13:6:
   | 
13 |     var \u{0000} = 1 // this is \u{0000}
   |         ^^^^^^^^ unknown start of token: \u{0000}
   | 

1 error generated, 1 error printed.
